# riot-launcher

./: CMakeLists.txt  LICENSE  README.md  index.html  loading.ui  login.py  login.qrc  login.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  res.qrc
component/: bk.cpp  bk.h  button.cpp  button.h  input.cpp  input.h  nav.cpp  nav.h  play_button.cpp  play_button.h  smooth_scroll_area.cpp  smooth_scroll_area.h  update.cpp  update.h
page/: update_page.cpp  update_page.h
